--- a/resources/assets/less/formview.less
+++ b/resources/assets/less/formview.less
@@ -68,6 +68,10 @@ form {
       background:#E5E8EB;
       padding:5px;
 
+      .control-label {
+        font-size:11px;
+      }
+
       .row:last-child .form-group {
         margin-bottom:0;
       }
