Tweak Checkbox CSS

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -81,3 +81,4 @@ body.sharp-auth {
 @import "formfields/field-date.less";
 @import "formfields/field-ref.less";
 @import "formfields/field-customSearch";
+@import "formfields/field-check";
