--- a/resources/assets/less/formview.less
+++ b/resources/assets/less/formview.less
@@ -47,7 +47,8 @@ form {
     padding:1px 7px;
   }
 
-  .form-control:focus {
+  .form-control:focus,
+  .input-active.focus {
     box-shadow:none;
     border-color:@sharp-contexbar-bg;
   }
