--- a/resources/assets/sharp.css
+++ b/resources/assets/sharp.css
@@ -8933,7 +8933,8 @@ form .validation-error {
   margin-top: 5px;
   padding: 1px 7px;
 }
-form .form-control:focus {
+form .form-control:focus,
+form .input-active.focus {
   box-shadow: none;
   border-color: #12dbe8;
 }
@@ -9847,4 +9848,40 @@ form .panel .panel-body .row:last-child .form-group {
 .customSearch-modal .list-group-item a {
   display: block;
   cursor: pointer;
+}
+.sharp-field-check .checkbox {
+  /** disabled **/
+}
+.sharp-field-check .checkbox input {
+  position: absolute;
+  left: -9999px;
+}
+.sharp-field-check .checkbox label {
+  display: block;
+  position: relative;
+  padding-left: 25px;
+  white-space: nowrap;
+  cursor: pointer;
+  user-select: none;
+}
+.sharp-field-check .checkbox input + label:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 2px;
+  width: 17px;
+  height: 17px;
+  border: 1px solid #aaa;
+  background: #f8f8f8;
+  border-radius: 3px;
+}
+.sharp-field-check .checkbox input:checked + label::before {
+  border-color: #12dbe8;
+  background: #12dbe8;
+  box-shadow: inset 0 0 0 4px #fff;
+}
+.sharp-field-check .checkbox input:disabled + label:before {
+  box-shadow: none;
+  border-color: #bbb;
+  background-color: #ddd;
 }
